# flexlang

./: .gitignore  README.md  STUDY-0.0.1.md  STUDY-ae3c522.md  book.toml  build.flx  mise.toml  pyproject.toml
.claude/workflows/: trait-review.js
.github/workflows/: ci.yml  docs.yml  publish.yml  publishing.yml
docs/: MVP.md  SUMMARY.md  adts.md  cli.md  examples.md  ffi.md  highlighting.md  introduction.md  lists.md  numerics.md  packages.md  std.md  strings.md  traits.md
docs/api/: Std.Arg.md  Std.Bytes.md  Std.Csv.md  Std.Env.md  Std.Fs.md  Std.IO.md  Std.Json.md  Std.List.md  Std.Map.md  Std.Math.md  Std.Proc.md  Std.Str.md  Std.Time.md  index.md
docs/diagnostics/: DOC001.md  EFFECT001.md  MATCH001.md  NAME001.md  NAME003.md  TYPE008.md  TYPE019.md  TYPE025.md  index.md
docs/reference/: syntax.md
editors/vscode/: extension.js  package.json
examples/: add.flx  adts.flx  effects.flx  ffi.flx  hello.flx  lists.flx  macros.flx  numerics.flx  records.flx  regions.flx  result.flx  std.flx  traits.flx
examples/package-demo/app/: build.flx  main.flx  package.flx
examples/package-demo/mathlib/: Mathlib.flx  package.flx
scripts/: install-llvm.sh  toolchain-info.sh
src/flx/: __init__.py  __main__.py  build.py  cli.py  diagnostics.py  docsengine.py  driver.py  interp.py  lsp.py  mdbook.py  modules.py  package.py  release.py  types.py
src/flx/backend/: __init__.py  harness.py  mlir.py  runtime.py  toolchain.py
src/flx/docsrc/: diagnostics.flx  guide.flx
src/flx/highlight/: __init__.py  lexer.py
src/flx/macro/: __init__.py  derive.py  expand.py  hygiene.py  interp.py  quasiquote.py  walk.py
src/flx/sema/: __init__.py  check.py  specialize.py
src/flx/std/Std/: Arg.flx  Bytes.flx  Csv.flx  Env.flx  Fs.flx  IO.flx  Json.flx  List.flx  Map.flx  Math.flx  Proc.flx  Str.flx  Time.flx
src/flx/syntax/: __init__.py  ast.py  dump.py  formatter.py  lexer.py  parser.py  tokens.py
tests/: test_adts.py  test_backend.py  test_build.py  test_check.py  test_cli.py  test_deps.py  test_effects.py  test_ffi.py  test_formatter.py  test_highlight.py  test_import_scopes.py  test_interp.py  test_lexer.py  test_lists.py  test_lsp.py  test_m13_bytes.py  test_m14_roadmap.py  test_m1_polish.py  test_m2_adts.py  test_m2_review.py  test_m3_lists.py  test_m4_numerics.py  test_m5_docs.py  test_m5_review.py  test_m6_io.py  test_m6_review.py  test_m7_floats.py  test_m8_assoc.py  test_m8_review.py  test_m9_m12.py  test_macros.py  test_macros_review.py  test_mangling.py  test_mdbook.py  test_module_blocks.py  test_modules.py  test_package.py  test_parse_features.py  test_parser.py  test_project_hardening.py  (+11 more)
