[project]
name = "flexlang"
version = "0.0.1"
description = "Flex — a native functional systems language (prototype compiler)."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Matt Neel", email = "matt@threephasetechnology.com" }]
keywords = ["compiler", "mlir", "llvm", "functional", "systems-language"]
# Core install is pure-Python and toolchain-free: `uvx --from flexlang flx` gives
# you parse/check/expand/highlight (+ `flx doctor`) with no LLVM. (The PyPI
# distribution is `flexlang` — `flx` is too close to an existing name — but the
# command stays `flx`.) The native backend (run/test/emit-mlir/build) shells out
# to a system MLIR/LLVM 22 toolchain that `flx doctor` detects — deliberately NOT
# a Python dependency.
dependencies = [
    "pygments>=2.19",
]

[project.scripts]
flx = "flx.cli:main"
flx-mdbook = "flx.mdbook:main"

# Register the Flex lexer with Pygments so `pygmentize -l flex`, Rich, and
# Sphinx/mkdocs can highlight .flx out of the box.
[project.entry-points."pygments.lexers"]
flex = "flx.highlight.lexer:FlexLexer"

[project.optional-dependencies]
# Optional direct-LLVM-IR builder backend. Bundles its own LLVM, so it is
# independent of (and may lag) the system MLIR/LLVM 22 toolchain.
llvmlite = ["llvmlite>=0.47.0"]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.6",
    "mypy>=1.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flx"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["lark.*", "xdsl.*", "llvmlite.*", "pygments.*"]
ignore_missing_imports = true

# Pygments ships no py.typed, so RegexLexer resolves to Any; allow subclassing
# it in the one module that defines the Flex lexer.
[[tool.mypy.overrides]]
module = ["flx.highlight.lexer"]
disallow_subclassing_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
