[project]
name = "flexlang"
version = "0.0.1"
description = "Flex — a native functional systems language (prototype compiler)."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Matt Neel", email = "matt@threephasetechnology.com" }]
keywords = ["compiler", "mlir", "llvm", "functional", "systems-language"]
# Core install is pure-Python and toolchain-free: `uvx --from flexlang flx` gives
# you parse/check/expand/highlight (+ `flx doctor`) with no LLVM. (The PyPI
# distribution is `flexlang` — `flx` is too close to an existing name — but the
# command stays `flx`.) The native backend (run/test/emit-mlir/build) shells out
# to a system MLIR/LLVM 22 toolchain that `flx doctor` detects — deliberately NOT
# a Python dependency.
dependencies = [
    "pygments>=2.19",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
Homepage = "https://github.com/mattneel/flexlang"
Documentation = "https://mattneel.github.io/flexlang/"
Repository = "https://github.com/mattneel/flexlang"
Issues = "https://github.com/mattneel/flexlang/issues"

[project.scripts]
flx = "flx.cli:main"
flx-mdbook = "flx.mdbook:main"

# Register the Flex lexer with Pygments so `pygmentize -l flex`, Rich, and
# Sphinx/mkdocs can highlight .flx out of the box.
[project.entry-points."pygments.lexers"]
flex = "flx.highlight.lexer:FlexLexer"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.6",
    "mypy>=1.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flx"]

[tool.hatch.build.targets.sdist]
include = [
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "uv.lock",
    "book.toml",
    "build.flx",
    "src/flx/**",
    "docs/**",
    "examples/**",
    "scripts/**",
    "tests/**",
]
exclude = [
    "STUDY-*.md",
    "ADVERSARIAL_REVIEW.md",
    "book/**",
    "dist/**",
    ".venv/**",
    ".pytest_cache/**",
    ".mypy_cache/**",
    ".ruff_cache/**",
    "__pycache__/**",
    "*.pyc",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["lark.*", "xdsl.*", "pygments.*"]
ignore_missing_imports = true

# Pygments ships no py.typed, so RegexLexer resolves to Any; allow subclassing
# it in the one module that defines the Flex lexer.
[[tool.mypy.overrides]]
module = ["flx.highlight.lexer"]
disallow_subclassing_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
